EXTRA_DIST=actcancel.ridl\
 asynctst.ridl\
 evtest.ridl\
 iftest.ridl\
 katest.ridl\
 stmtest.ridl\
 sftest.ridl\
 hellowld.ridl

javatests=./java/src/org/rpcf/tests
EXTRA_DIST+=$(javatests)/actcancel/ActiveCancelcli.java\
 $(javatests)/actcancel/ActiveCancelsvr.java\
 $(javatests)/actcancel/maincli.java\
 $(javatests)/asynctst/AsyncTestcli.java\
 $(javatests)/asynctst/AsyncTestsvr.java\
 $(javatests)/asynctst/maincli.java\
 $(javatests)/evtest/EventTestcli.java\
 $(javatests)/evtest/maincli.java\
 $(javatests)/evtest/mainsvr.java\
 $(javatests)/iftest/IfTestsvr.java\
 $(javatests)/iftest/maincli.java\
 $(javatests)/katest/KeepAlivesvr.java\
 $(javatests)/katest/maincli.java\
 $(javatests)/stmtest/StreamTestcli.java\
 $(javatests)/stmtest/StreamTestsvr.java\
 $(javatests)/stmtest/TransferContext.java\
 $(javatests)/stmtest/maincli.java\
 $(javatests)/sftest/FileTransfercli.java \
 $(javatests)/sftest/FileTransfersvr.java \
 $(javatests)/sftest/TransFileContext.java \
 $(javatests)/sftest/TransferContext.java \
 $(javatests)/sftest/TransferContextCli.java \
 $(javatests)/sftest/maincli.java\
 $(javatests)/HelloWorld/HelloWorldSvcsvr.java \
 $(javatests)/HelloWorld/maincli.java

