EXTRA_DIST=actcancel.ridl\
 asynctst.ridl\
 evtest.ridl\
 iftest.ridl\
 katest.ridl\
 stmtest.ridl\
 sftest.ridl\
 hellowld.ridl

javatests=./java/src/org/rpcf/tests
EXTRA_DIST+=$(javatests)/actcancel/ActiveCancelcli.java\
 $(javatests)/actcancel/ActiveCancelsvr.java\
 $(javatests)/actcancel/maincli.java\
 $(javatests)/asynctst/AsyncTestcli.java\
 $(javatests)/asynctst/AsyncTestsvr.java\
 $(javatests)/asynctst/maincli.java\
 $(javatests)/evtest/EventTestcli.java\
 $(javatests)/evtest/maincli.java\
 $(javatests)/evtest/mainsvr.java\
 $(javatests)/iftest/IfTestsvr.java\
 $(javatests)/iftest/maincli.java\
 $(javatests)/katest/KeepAlivesvr.java\
 $(javatests)/katest/maincli.java\
 $(javatests)/stmtest/StreamTestcli.java\
 $(javatests)/stmtest/StreamTestsvr.java\
 $(javatests)/stmtest/TransferContext.java\
 $(javatests)/stmtest/maincli.java\
 $(javatests)/sftest/FileTransfercli.java \
 $(javatests)/sftest/FileTransfersvr.java \
 $(javatests)/sftest/TransFileContext.java \
 $(javatests)/sftest/TransferContext.java \
 $(javatests)/sftest/TransferContextCli.java \
 $(javatests)/sftest/maincli.java\
 $(javatests)/HelloWorld/HelloWorldSvcsvr.java \
 $(javatests)/HelloWorld/maincli.java

pytests=./python
EXTRA_DIST += $(pytests)/actcancel/ActiveCancelcli.py \
 $(pytests)/actcancel/ActiveCancelsvr.py \
 $(pytests)/actcancel/maincli.py \
 $(pytests)/asynctst/AsyncTestcli.py \
 $(pytests)/asynctst/AsyncTestsvr.py \
 $(pytests)/asynctst/maincli.py \
 $(pytests)/evtest/EventTestcli.py \
 $(pytests)/evtest/maincli.py \
 $(pytests)/evtest/mainsvr.py \
 $(pytests)/hellowld/HelloWorldSvcsvr.py \
 $(pytests)/hellowld/maincli.py \
 $(pytests)/iftest/IfTestsvr.py \
 $(pytests)/iftest/maincli.py \
 $(pytests)/katest/KeepAlivesvr.py \
 $(pytests)/katest/maincli.py \
 $(pytests)/sftest/FileTransfercli.py \
 $(pytests)/sftest/FileTransfersvr.py \
 $(pytests)/sftest/TransFileContext.py \
 $(pytests)/sftest/TransferContext.py \
 $(pytests)/sftest/maincli.py \
 $(pytests)/stmtest/StreamTestcli.py \
 $(pytests)/stmtest/StreamTestsvr.py \
 $(pytests)/stmtest/maincli.py

cpptests=./cpp
EXTRA_DIST += $(cpptests)/actcancel/ActiveCancelcli.cpp
$(cpptests)/actcancel/ActiveCancelcli.h
$(cpptests)/actcancel/ActiveCancelsvr.cpp
$(cpptests)/actcancel/ActiveCancelsvr.h
$(cpptests)/actcancel/maincli.cpp
$(cpptests)/asynctst/AsyncTestcli.cpp
$(cpptests)/asynctst/AsyncTestcli.h
$(cpptests)/asynctst/AsyncTestsvr.cpp
$(cpptests)/asynctst/AsyncTestsvr.h
$(cpptests)/asynctst/maincli.cpp
$(cpptests)/evtest/EventTestcli.cpp
$(cpptests)/evtest/maincli.cpp
$(cpptests)/evtest/mainsvr.cpp
$(cpptests)/hellowld/HelloWorldSvcsvr.cpp
$(cpptests)/hellowld/maincli.cpp
$(cpptests)/iftest/IfTestsvr.cpp
$(cpptests)/iftest/maincli.cpp
$(cpptests)/katest/KeepAlivesvr.cpp
$(cpptests)/katest/KeepAlivesvr.h
$(cpptests)/katest/maincli.cpp
$(cpptests)/sftest/FileTransfercli.cpp
$(cpptests)/sftest/FileTransfercli.h
$(cpptests)/sftest/FileTransfersvr.cpp
$(cpptests)/sftest/FileTransfersvr.h
$(cpptests)/sftest/Makefile
$(cpptests)/sftest/Readme.md
$(cpptests)/sftest/maincli.cpp
$(cpptests)/sftest/transctx.cpp
$(cpptests)/sftest/transctx.h
$(cpptests)/stmtest/StreamTestcli.cpp
$(cpptests)/stmtest/StreamTestcli.h
$(cpptests)/stmtest/StreamTestsvr.cpp
$(cpptests)/stmtest/StreamTestsvr.h
$(cpptests)/stmtest/commdefs.h
$(cpptests)/stmtest/maincli.cpp

