EXTRA_DIST=index.html index.js webpack.config.js rpc/startws.js rpc/protopkt.js \
combase/configdb.js combase/factory.js combase/msgmatch.js combase/objbase.js \
combase/cbuffer.js combase/defines.js combase/enums.js combase/SERI_HEADER_BASE.js \
dbusmsg/LICENSE dbusmsg/align.js dbusmsg/constants.js dbusmsg/dbus-buffer.js \
dbusmsg/header-signature.json dbusmsg/marshall.js dbusmsg/marshallers.js \
dbusmsg/message.js dbusmsg/signature.js dbusmsg/unmarshall.js \
rpc/bridge.js rpc/dmsg.js combase/iomsg.js rpc/ioworker.js rpc/handshak.js \
rpc/enablevtrmt.js ipc/enablevt.js ipc/iomgr.js ipc/proxy.js \
rpc/fwrdreqrmt.js ipc/fwrdreq.js combase/seribase.js rpc/fwrdevtrmt.js \
ipc/fwrdevt.js ipc/cancelrq.js test/asynctst.js test/actcancel.js \
test/evtest.js ipc/keepalive.js rpc/keepalivermt.js test/katest.js \
ipc/openstm.js rpc/openstmrmt.js test/stmtest.js rpc/stream.js \
ipc/stmwrite.js ipc/stmevt.js rpc/stmwritermt.js


